--- a/shoppingList/src/main/resources/application.yml
+++ b/shoppingList/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
     #For MySQL 5
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     open-in-view: false
     properties:
       hibernate:
