--- a/jwtappdemo/pom.xml
+++ b/jwtappdemo/pom.xml
@@ -15,6 +15,8 @@
 	<description>Jwt based spring security REST API</description>
 	<properties>
 		<java.version>17</java.version>
+		<mysql.connetor.version>8.0.28</mysql.connetor.version>
+		<jsonwebtoken.version>0.9.0</jsonwebtoken.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -33,6 +35,23 @@
 			<groupId>org.liquibase</groupId>
 			<artifactId>liquibase-core</artifactId>
 		</dependency>
+
+		<!-- MySQL connector -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>${mysql.connetor.version}</version>
+		</dependency>
+
+
+		<!-- JSON Web Token lib -->
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>${jsonwebtoken.version}</version>
+		</dependency>
+
+		<!-- Lombok -->
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -56,14 +75,6 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<configuration>
-					<excludes>
-						<exclude>
-							<groupId>org.projectlombok</groupId>
-							<artifactId>lombok</artifactId>
-						</exclude>
-					</excludes>
-				</configuration>
 			</plugin>
 		</plugins>
 	</build>
