--- a/jwtappdemo/src/main/resources/application.properties
+++ b/jwtappdemo/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+server.port=8075
+
+spring.datasource.url=jdbc:mysql://localhost:3306/jwtappdemo?useSSL=false&serverTimezone=UTC
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=mypass
+
+spring.liquibase.change-log=classpath:liquibase/db.changelog-master.xml
+spring.liquibase.url=jdbc:mysql://localhost:3306/jwtappdemo?serverTimezone=UTC
+spring.liquibase.user=root
+spring.liquibase.password=mypass
 
