--- a/jwtappdemo/src/main/resources/application.properties
+++ b/jwtappdemo/src/main/resources/application.properties
@@ -10,3 +10,10 @@ spring.liquibase.url=jdbc:mysql://localhost:3306/jwtappdemo?serverTimezone=UTC
 spring.liquibase.user=root
 spring.liquibase.password=mypass
 
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.show-sql=true
+#To beautify or pretty print the SQL, we can add:
+spring.jpa.properties.hibernate.format_sql=true
+
+
