--- a/jwtappdemo/src/main/resources/application.properties
+++ b/jwtappdemo/src/main/resources/application.properties
@@ -16,4 +16,7 @@ spring.jpa.show-sql=true
 #To beautify or pretty print the SQL, we can add:
 spring.jpa.properties.hibernate.format_sql=true
 
+jwt.token.secret=jwtappdemo
+jwt.token.expired=3600000
+
 
