--- a/jwtappdemo/src/main/resources/application.properties
+++ b/jwtappdemo/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.liquibase.password=mypass
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
-#To beautify or pretty print the SQL, we can add:
+#To beautify or pretty print the SQL:
 spring.jpa.properties.hibernate.format_sql=true
 
 jwt.token.secret=jwtappdemo
